--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -53,7 +53,7 @@ $block: 'nav';
     padding: 24px 16px;
     font-size: 18px;
     box-shadow: rgba($black, 0.08) 0px 8px 28px;
-    background-image: url('../../assets/images/open-pokeball.svg');
+    // background-image: url('../../assets/images/open-pokeball.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 95px;
@@ -71,7 +71,7 @@ $block: 'nav';
   }
 
   &__item {
-    background-image: url('../../assets/images/open-pokeball.svg');
+    // background-image: url('../../assets/images/open-pokeball.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
