--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -7,7 +7,7 @@ $block: 'header';
     background-color: $white;
     border-bottom-left-radius: $radius-container + 20;
     border-bottom-right-radius: $radius-container + 20;
-    background-image: url('../../assets/images/poke-balls.svg');
+    // background-image: url('../../assets/images/poke-balls.svg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: 50%;
